--- a/style/style.css
+++ b/style/style.css
@@ -24,8 +24,6 @@ header h1 a{
     width: 70px;
     padding: 10px 10px;
 }
-
-
 header nav{
     padding-top: 36px;
     padding-left: 168px;
@@ -61,55 +59,28 @@ main h2{
     color: black;
     font-size: 24px;
 }
-
-.social{
-    width: 50px;
-    height: 100px;
-    background-color: #ffffff;
-    position: fixed;
-    top: 120px;
-    right: 0;
-}
-.facebook{
-    background-image: url(../img/fb.png);
-    height: 50px;
-    width: 50px;
-    background-size: 100%;
-}
-.facebook:hover{
-    background-image: url(../img/fb2.png)
-}
-.facebook a{
-    display: block;
-    width: 50px;
-    height: 50px;
-}
-.inst{
-    background-image: url(../img/inst.png);
-    height: 50px;
-    width: 50px;
-    background-size: 100%;
-}
-.inst:hover{
-    background-image: url(../img/inst2.png);
-}
-.inst a{
-    display: block;
-    height: 50px;
-    width: 50px;
-}
 .mshobeli{
     width: 100%;
     display: flex;
     padding-left: 108px;
     padding-top: 50px;
+    position: relative;
 }
+.charcho{
+    width: 100%;
+} 
+.go{
+    padding-top: 6px;
+}
+.go::after{
+    content: "?";
+}
+
 .music{
     width: 290px;
     height: 244px;
     border: solid #000000;
-    margin-right: 108px;
-    position: relative;
+    position: relative; 
 }
 .like{
     height: 50px;
@@ -146,7 +117,42 @@ main h2{
 .artist::after{
     content: "...";
 } 
-
+.social{
+    width: 50px;
+    height: 100px;
+    background-color: #ffffff;
+    position: fixed;
+    top: 120px;
+    right: 0;
+}
+.facebook{
+    background-image: url(../img/fb.png);
+    height: 50px;
+    width: 50px;
+    background-size: 100%;
+}
+.facebook:hover{
+    background-image: url(../img/fb2.png)
+}
+.facebook a{
+    display: block;
+    width: 50px;
+    height: 50px;
+}
+.inst{
+    background-image: url(../img/inst.png);
+    height: 50px;
+    width: 50px;
+    background-size: 100%;
+}
+.inst:hover{
+    background-image: url(../img/inst2.png);
+}
+.inst a{
+    display: block;
+    height: 50px;
+    width: 50px;
+}
 footer{
     width: 100%;
     background-color: #000000;
@@ -202,7 +208,7 @@ footer ul li a{
 }
 .name{
     font-size: 18px;
-}
+} 
 .mshobeli2{
     width: 100%;
     display: flex;
